スマホ調整

--- a/public/page-flow.html
+++ b/public/page-flow.html
@@ -118,7 +118,7 @@
                       <div class="p-flow__list-item-icon"><img src="./assets/img/flow/flow_step02.svg" alt="1次面接（部門の担当者もしくは部長）" /></div>
                       <div class="p-flow__list-item-text">
                         <span class="en step">step02</span>
-                        <h3 class="p-flow__list-item-title">1次面接（部門の担当者もしくは部長）</h3>
+                        <h3 class="p-flow__list-item-title">1次面接<br class="sp" />（部門の担当者もしくは部長）</h3>
                         <p class="desc note">対面もしくはオンライン</p>
                       </div>
                     </li>
