--- a/public/page-job_overview.html
+++ b/public/page-job_overview.html
@@ -79,11 +79,12 @@
                   <a href="#sales_position" class="c-anchorlink__link"> 営業 </a>
                 </li>
                 <li class="c-anchorlink__item">
-                  <a href="#sales_assistant" class="c-anchorlink__link"> 営業アシスタント </a>
-                </li>
-                <li class="c-anchorlink__item">
                   <a href="#production_management" class="c-anchorlink__link"> 生産管理 </a>
                 </li>
+                <li class="c-anchorlink__item">
+                  <a href="#sales_assistant" class="c-anchorlink__link"> 営業アシスタント </a>
+                </li>
+
                 <li class="c-anchorlink__item">
                   <a href="#technical_position" class="c-anchorlink__link"> 技術職 </a>
                 </li>
@@ -98,7 +99,7 @@
                 <h2 class="p-job_overview__title l_subpage-title"><small class="p-job_overview__title-en en"> Sales position </small>営業</h2>
 
                 <div class="p-job_overview__text">
-                  <h3 class="p-job_overview__catchcopy">キャッチコピーが入ります。</h3>
+                  <h3 class="p-job_overview__catchcopy">針金を使うメーカーに、最適な製品を提案する。</h3>
                   <p class="p-job_overview__desc">大手から中小企業まで幅広い顧客に対し、ルート営業を中心に新規開拓も行います（既存：80％、新規：20％）。 全国への出張に加え、一部海外案件にも携わるチャンスがあります。自社の高品質な製品を提案し、信頼関係を築くことで長期的な取引へとつなげます。</p>
                 </div>
                 <div calss="p-job_overview__img">
@@ -129,7 +130,7 @@
                 </div>
 
                 <div class="l_interview">
-                  <h2 class="l_interview-title">この職種の社員インタビューを見る</h2>
+                  <h2 class="l_interview-title">この職種の社員<br class="sp" />インタビューを見る</h2>
                   <div class="l_interview__content">
                     <ul class="p-interview__list grid md:grid-cols-1">
                       <li class="p-interview__list-item">
@@ -154,46 +155,11 @@
                 </div>
               </div>
 
-              <div class="p-job_overview__box" id="sales_assistant">
-                <h2 class="p-job_overview__title l_subpage-title"><small class="p-job_overview__title-en en"> Sales Assistant </small>営業アシスタント</h2>
-
-                <div class="p-job_overview__text">
-                  <h3 class="p-job_overview__catchcopy">キャッチコピーが入ります。</h3>
-                  <p class="p-job_overview__desc">営業担当のサポート役として、資料作成や受発注業務、顧客対応など幅広い事務業務を行います。さらに、貿易実務にも関わるため、英語力や国際取引の知識を活かすチャンスもあります。営業活動を円滑に進める“縁の下の力持ち”として活躍いただきます。</p>
-                </div>
-                <div calss="p-job_overview__img">
-                  <img src="./assets/img/job_overview/job_overview_img02.jpg" alt="営業アシスタント" />
-                </div>
-
-                <div class="p-job_overview__environment">
-                  <div class="flex">
-                    <h2>働く環境</h2>
-                    <table>
-                      <tr>
-                        <th>勤務地</th>
-                        <td>
-                          本社／倉庫：〒578-0905 大阪府東大阪市川田3-10-7<br />
-                          ※アクセス：近鉄けいはんな線「吉田駅」から徒歩18分
-                        </td>
-                      </tr>
-                      <tr>
-                        <th>勤務時間</th>
-                        <td>8：30〜17：30（休憩12：00-13：00）</td>
-                      </tr>
-                      <tr>
-                        <th>休日休暇</th>
-                        <td>土日祝（月1土曜出勤）、GW、夏季、年末年始、年次有給休暇、慶弔休暇</td>
-                      </tr>
-                    </table>
-                  </div>
-                </div>
-              </div>
-
               <div class="p-job_overview__box" id="production_management">
                 <h2 class="p-job_overview__title l_subpage-title"><small class="p-job_overview__title-en en"> Production Management </small>生産管理</h2>
 
                 <div class="p-job_overview__text">
-                  <h3 class="p-job_overview__catchcopy">キャッチコピーが入ります。</h3>
+                  <h3 class="p-job_overview__catchcopy">安定供給の要として、生産を統括する。</h3>
                   <p class="p-job_overview__desc">生産計画の立案から人材配置、設備管理、資材発注、年間稼働スケジュールの策定まで幅広く担当。伸線→めっき加工→検査・出荷という一連の工程を行う製造工場全体を統括します。独自の技術で生み出す「極厚亜鉛めっき線」の安定供給を支える要となるポジションです。</p>
                 </div>
                 <div calss="p-job_overview__img">
@@ -224,12 +190,12 @@
                 </div>
 
                 <div class="l_interview">
-                  <h2 class="l_interview-title">この職種の社員インタビューを見る</h2>
+                  <h2 class="l_interview-title">この職種の社員<br class="sp" />インタビューを見る</h2>
                   <div class="l_interview__content">
                     <ul class="p-interview__list grid md:grid-cols-1">
                       <li class="p-interview__list-item">
                         <a href="">
-                          <i class="p-interview__list-item-cat">Member interview 　　ー 社員インタビュー　　</i>
+                          <i class="p-interview__list-item-cat en">Member interview 　　ー 社員インタビュー　　</i>
                           <picture>
                             <source srcset="./assets/img/top/interview02.png" type="image/webp" />
                             <source srcset="./assets/img/top/interview02.png" />
@@ -249,15 +215,15 @@
                 </div>
               </div>
 
-              <div class="p-job_overview__box" id="technical_position">
-                <h2 class="p-job_overview__title l_subpage-title"><small class="p-job_overview__title-en en"> Technical Position </small>技術職</h2>
+              <div class="p-job_overview__box" id="sales_assistant">
+                <h2 class="p-job_overview__title l_subpage-title"><small class="p-job_overview__title-en en"> Sales Assistant </small>営業アシスタント</h2>
 
                 <div class="p-job_overview__text">
-                  <h3 class="p-job_overview__catchcopy">針金ビジネスで、新たな価値を創造する。</h3>
-                  <p class="p-job_overview__desc">金属系や機械系の知識を活かし、極厚亜鉛めっき鉄線や亜鉛アルミ合金めっき鉄線の開発・応用に携わります。用途に応じた仕様決定や新分野開拓のほか、鉄線伸線装置のメンテナンスや改良にも取り組みます。最先端技術を支える専門性が発揮できる仕事です。</p>
+                  <h3 class="p-job_overview__catchcopy">営業活動のサポート役として、幅広く手掛けていく。</h3>
+                  <p class="p-job_overview__desc">営業担当のサポート役として、資料作成や受発注業務、顧客対応など幅広い事務業務を行います。さらに、貿易実務にも関わるため、英語力や国際取引の知識を活かすチャンスも。営業活動を円滑に進める“縁の下の力持ち”として活躍します。</p>
                 </div>
                 <div calss="p-job_overview__img">
-                  <img src="./assets/img/job_overview/job_overview_img04.jpg" alt="技術職" />
+                  <img src="./assets/img/job_overview/job_overview_img02.jpg" alt="営業アシスタント" />
                 </div>
 
                 <div class="p-job_overview__environment">
@@ -284,16 +250,47 @@
                 </div>
               </div>
 
-              <div class="p-job_overview__box" id="manufacturing_machine_operator">
-                <h2 class="p-job_overview__title l_subpage-title"><small class="p-job_overview__title-en en"> Manufacturing Machine Operator </small>めっき鉄線の製造・機械オペレーター</h2>
+              <div class="p-job_overview__box" id="technical_position">
+                <h2 class="p-job_overview__title l_subpage-title"><small class="p-job_overview__title-en en"> Technical Position </small>技術職</h2>
 
                 <div class="p-job_overview__text">
-                  <h3 class="p-job_overview__catchcopy">キャッチコピーが入ります。</h3>
-                  <p class="p-job_overview__desc">
-                    技能工として、亜鉛めっきプラントの管理や各種機械オペレーションを担当します。加熱炉の温度調整や機械操作、表面検査などを行い、高品質な製品づくりを支えます。未経験からでも技術を習得でき、ものづくりの醍醐味を実感できるポジションです。<br />
-                    技能工として亜鉛めっきプラントの管理・機械オペレーターなどの製造業務全般。<br />
-                    めっきの表面に異常がないかの目視検査や加熱炉の温度調整などの機械操作が主な作業となる製造の仕事です。
-                  </p>
+                  <h3 class="p-job_overview__catchcopy">新たな技術を追求し、針金の可能性を切り拓く。</h3>
+                  <p class="p-job_overview__desc">金属系や機械系の知識を活かし、極厚亜鉛めっき鉄線や亜鉛アルミ合金めっき鉄線の開発・応用に携わります。用途に応じた仕様決定や新分野開拓のほか、鉄線伸線装置のメンテナンスや改良にも取り組むなど、最先端技術を支える専門性が発揮できる仕事です。</p>
+                </div>
+                <div calss="p-job_overview__img">
+                  <img src="./assets/img/job_overview/job_overview_img04.jpg" alt="技術職" />
+                </div>
+
+                <div class="p-job_overview__environment">
+                  <div class="flex">
+                    <h2>働く環境</h2>
+                    <table>
+                      <tr>
+                        <th>勤務地</th>
+                        <td>
+                          岐阜工場：〒509-0249 岐阜県可児市姫ケ丘2-18<br />
+                          ※アクセス：JR太多線「可児駅」・名鉄広見線「新可児駅」から車8分
+                        </td>
+                      </tr>
+                      <tr>
+                        <th>勤務時間</th>
+                        <td>8：00～17：00（休憩12：00-13：00）</td>
+                      </tr>
+                      <tr>
+                        <th>休日休暇</th>
+                        <td>土日祝(月1土曜出勤)、GW、夏季、年末年始、年次有給休暇、慶弔休暇</td>
+                      </tr>
+                    </table>
+                  </div>
+                </div>
+              </div>
+
+              <div class="p-job_overview__box" id="manufacturing_machine_operator">
+                <h2 class="p-job_overview__title l_subpage-title"><small class="p-job_overview__title-en en"> Manufacturing Machine Operator </small>めっき鉄線の製造<br class="sp" />・機械オペレーター</h2>
+
+                <div class="p-job_overview__text">
+                  <h3 class="p-job_overview__catchcopy">技能工として、日々の生産を遂行していく。</h3>
+                  <p class="p-job_overview__desc">亜鉛めっきプラントの管理・機械オペレーターなどの製造業務全般を担当します。めっきの表面に異常がないかの目視検査や加熱炉の温度調整などの機械操作が主な仕事です。未経験からでもイチから技術を習得でき、モノづくりの醍醐味を実感できます。</p>
                 </div>
                 <div calss="p-job_overview__img">
                   <img src="./assets/img/job_overview/job_overview_img05.jpg" alt="めっき鉄線の製造・機械オペレーター" />
