--- a/public/page-new_initiatives.html
+++ b/public/page-new_initiatives.html
@@ -180,7 +180,7 @@
                 <div class="p-initiatives__bg">
                   <div class="flex p-initiatives__inner flex--reverse">
                     <div class="p-initiatives__txt w-1/2 pl-2">
-                      <h3 class="p-initiatives__sub-title">日本ラグビーフットボール協会との<br />コラボ</h3>
+                      <h3 class="p-initiatives__sub-title">日本ラグビーフットボール<br class="sp" />協会との<br class="pc" />コラボ</h3>
                       <p class="p-initiatives__desc desc">東大阪市にある国内ラグビーの聖地『花園ラグビー場』のあるご縁から、日本代表戦の記念品を制作。針金でラグビーボール型にして、プレートは東大阪のパンチングメタル会社に依頼して完成させました。</p>
                     </div>
                     <div class="p-initiatives__img w-1/2 pr-2">
@@ -332,7 +332,7 @@
                 <div class="p-initiatives__bg">
                   <div class="flex p-initiatives__inner flex--reverse">
                     <div class="p-initiatives__txt w-1/2 pl-2">
-                      <h3 class="p-initiatives__sub-title">インダストリアルデザイン協会の<br />学生デザイン賞</h3>
+                      <h3 class="p-initiatives__sub-title">インダストリアルデザイン<br class="sp" />協会の<br class="pc" />学生デザイン賞</h3>
                       <p class="p-initiatives__desc desc">
                         公益社団法人日本インダストリアルデザイン協会『JIDA』 とのコラボで、学生デザイン賞としてワイヤーアート作品の募集を行いました。「線材を活かしたプロダクト」をテーマに、8校から全54ものアイデアが集まり、最終的に最優秀賞1点、優秀賞2点、SAKURATECH賞1点、JIDA賞2点を選出。斬新な作品が誕生し、ワイヤーアートの可能性が広がりました。
                       </p>
@@ -411,7 +411,7 @@
                 <div class="p-initiatives__bg">
                   <div class="flex p-initiatives__inner flex--reverse">
                     <div class="p-initiatives__txt w-1/2 pl-2">
-                      <h3 class="p-initiatives__sub-title">可児っこらぼ／ものづくり工夫店</h3>
+                      <h3 class="p-initiatives__sub-title">可児っこらぼ／<br class="sp" />ものづくり工夫店</h3>
                       <p class="p-initiatives__desc desc">説明文が入ります。こちらはダミーです。説明文が入ります。こちらはダミーです。説明文が入ります。こちらはダミーです。説明文が入ります。こちらはダミーです。</p>
                     </div>
                     <div class="p-initiatives__img w-1/2 pr-2">
