--- a/public/page-vision.html
+++ b/public/page-vision.html
@@ -63,7 +63,7 @@
           <section class="c-hero">
             <div class="c-hero__inner">
               <div class="c-hero__txt">
-                <h2 class="c-hero__title">針金ビジネスで、新たな価値を創造する。</h2>
+                <h2 class="c-hero__title">針金ビジネスで、<br class="sp" />新たな価値を創造する。</h2>
                 <p class="c-hero__desc">唯一の独立系企業として、業界に新たな可能性を追求するのが私たちの使命です。針金製品としての単なる強度や耐久性、技術力だけではなく、街に暮らす人々の心を豊かにしていくデザイン性や、未来社会へ希望を感じる環境面などにも配慮した製品・サービスを創造していきます。</p>
               </div>
             </div>
@@ -73,7 +73,7 @@
           <div class="l-page-content">
             <section class="p-vision sec">
               <div class="p-vision__business" id="business">
-                <h2 class="p-vision__title l_subpage-title">私たちの提供価値と事業展開</h2>
+                <h2 class="p-vision__title l_subpage-title">私たちの提供価値と<br class="sp" />事業展開</h2>
                 <p class="p-vision__desc desc">サクラテックの「国土と社会の“興”靭化」とは、単なる耐久性などの強靭化ではなく、<br />以下の「つよく・やさしく・うつくしく」を兼ね備えた「“興”靭さ（おもろカッコいい）」のことを指します。</p>
               </div>
               <div class="p-vision__value">
@@ -129,7 +129,7 @@
                             <img src="./assets/img/vision/vision_img02.jpg" alt="耐久力" />
                           </div>
                           <div class="right text-box">
-                            <h4>うつくしい亜鉛めっき鉄線・鋼線</h4>
+                            <h4>うつくしい亜鉛めっき鉄線・<br class="sp" />鋼線</h4>
                             <p class="desc">軟鋼線材や硬鋼線材に亜鉛めっきコーティングを施した、サクラテックを代表する製品です。耐食性はさることながら、その最大の特徴は見た目のうつくしさ。人の目に触れるフェンスや落石防護網など、様々な針金製品の部材として活躍しています。</p>
                           </div>
                         </li>
@@ -138,7 +138,7 @@
                             <img src="./assets/img/vision/vision_img03.jpg" alt="耐久力" />
                           </div>
                           <div class="right text-box">
-                            <h4>災害大国の国土強靭化への貢献</h4>
+                            <h4>災害大国の<br class="sp" />国土強靭化への貢献</h4>
                             <p class="desc">自然が豊かだからこそ災害の多い日本において、人々の安心安全な生活を守るインフラ整備は重要です。サクラテックの製品は、質の高い針金によって落石や川の氾濫を防ぐなど国土強靭化の一翼を担っています。</p>
                           </div>
                         </li>
@@ -147,7 +147,7 @@
                             <img src="./assets/img/vision/vision_img04.jpg" alt="耐久力" />
                           </div>
                           <div class="right text-box">
-                            <h4>果樹園や養殖いけすなど多様な活躍</h4>
+                            <h4>果樹園や養殖いけすなど<br class="sp" />多様な活躍</h4>
                             <p class="desc">強度と耐久性、加工柔軟性に優れた当社の針金製品は、果樹園用規格の針金や牧柵の有刺鉄線、土木建築用の部材鉄線、海岸付近のかごマット、魚の養殖いけす鉄網など多岐にわたって活躍しています。</p>
                           </div>
                         </li>
@@ -172,8 +172,8 @@
 
                     <div class="p-vision__value-contents-body">
                       <div class="p-vision__value-contents-body-title">
-                        <h3 class="">サステナブルな素材で、社会に貢献する。</h3>
-                        <p class="desc">再生可能な“鉄”を扱いながら、国土強靭強化に限らず、<br />その可能性を広く社会に活かしていく取り組みを行っています。</p>
+                        <h3 class="">サステナブルな素材で、<br class="sp" />社会に貢献する。</h3>
+                        <p class="desc">再生可能な“鉄”を扱いながら、<br class="sp" />国土強靭強化に限らず、<br />その可能性を広く社会に活かしていく<br class="sp" />取り組みを行っています。</p>
                       </div>
 
                       <ul class="p-vision__value-contents-body-list">
@@ -182,7 +182,7 @@
                             <img src="./assets/img/vision/vision_img05.jpg" alt="耐久力" />
                           </div>
                           <div class="right text-box">
-                            <h4>ご高齢者の方々に、アートでリハビリを。</h4>
+                            <h4>ご高齢者の方々に、<br class="sp" />アートでリハビリを。</h4>
                             <p class="desc">手先を動かすワイヤーアートづくりは、リハビリに効果があると考え、介護グループと連携。職員の方々がご高齢の入居者の方々にワークができるよう、サクラテックメンバーが指導しています。</p>
                           </div>
                         </li>
@@ -191,7 +191,7 @@
                             <img src="./assets/img/vision/vision_img06.jpg" alt="耐久力" />
                           </div>
                           <div class="right text-box">
-                            <h4>発達に課題を持つ子どもたちに楽しみを。</h4>
+                            <h4>発達に課題を持つ<br class="sp" />子どもたちに楽しみを。</h4>
                             <p class="desc">発達に心配や難しさのある子どもたちのための“運動療育”に取り組んでいるLIGと連携し、ワイヤーアートづくりを実施しました。子どもたちに、つくる楽しさ・喜びを感じてもらいたいという想いで活動しています。</p>
                           </div>
                         </li>
@@ -200,7 +200,7 @@
                             <img src="./assets/img/vision/vision_img07.jpg" alt="耐久力" />
                           </div>
                           <div class="right text-box">
-                            <h4>モノづくりの楽しさを、地域の人々と。</h4>
+                            <h4>モノづくりの楽しさを、<br class="sp" />地域の人々と。</h4>
                             <p class="desc">毎年4月に、サクラテック主催で複数のモノづくり企業と連携した地域イベントを開催。地域の人々がワークショップやゲームを通じて、気軽にモノづくりを体験できる場を提供しています。</p>
                           </div>
                         </li>
@@ -226,7 +226,7 @@
                     <div class="p-vision__value-contents-body">
                       <div class="p-vision__value-contents-body-title">
                         <h3 class="">廃材ワイヤーを、アートへ。</h3>
-                        <p class="desc">いかにワイヤーで、情緒的な価値を新たに創造するか。<br />当社では生産で発生するワイヤーの廃材を活用したアートプロダクトを展開しています。</p>
+                        <p class="desc">いかにワイヤーで、情緒的な価値を<br class="sp" />新たに創造するか。<br />当社では生産で発生するワイヤーの廃材を<br class="sp" />活用したアートプロダクトを<br class="sp" />展開しています。</p>
                       </div>
 
                       <ul class="p-vision__value-contents-body-list">
