--- a/public/page-welfare_education.html
+++ b/public/page-welfare_education.html
@@ -156,7 +156,7 @@
                       <img src="./assets/img/education_welfare/benefits_icon11.svg" alt="" />
                     </li>
                   </ul>
-                  <p class="desc u-center u-mt-30">今後もNetflix視聴支援など福利厚生の拡充を検討中！</p>
+                  <p class="desc u-center u-mt-30">今後もNetflix視聴支援など<br class="sp" />福利厚生の拡充を検討中！</p>
                 </div>
 
                 <div class="p-education_welfare__contents--programs">
