サイト調整

--- a/public/page-job_overview.html
+++ b/public/page-job_overview.html
@@ -43,12 +43,12 @@
     <div class="l-root-wrapper">
       <div class="main-contents">
         <main class="l-container">
-          <div class="l-page-title">
-            <div class="l-page-title__box">
-              <div class="l-page-title__title">
-                <div class="l-page-title__title-inner">
-                  <div class="l-page-title__title-en">Job Overview</div>
-                  <h1 class="l-page-title__title-jp">仕事紹介</h1>
+          <div class="l-page-title02">
+            <div class="l-page-title02__box">
+              <div class="l-page-title02__title">
+                <div class="l-page-title02__title-inner">
+                  <div class="l-page-title02__title-en">Job Overview</div>
+                  <h1 class="l-page-title02__title-jp">仕事紹介</h1>
                 </div>
                 <div class="breadcrumb en"><a href="">TOP</a> ／ <span>Job Overview</span></div>
               </div>
