--- a/public/page-interview02.html
+++ b/public/page-interview02.html
@@ -43,12 +43,12 @@
     <div class="l-root-wrapper">
       <div class="main-contents">
         <main class="l-container">
-          <div class="l-page-title">
-            <div class="l-page-title__box">
-              <div class="l-page-title__title flex">
-                <div class="l-page-title__title-inner">
-                  <div class="l-page-title__title-en">Member interview</div>
-                  <h1 class="l-page-title__title-jp">生産管理社員インタビュー</h1>
+          <div class="l-page-title02">
+            <div class="l-page-title02__box">
+              <div class="l-page-title02__title flex">
+                <div class="l-page-title02__title-inner">
+                  <div class="l-page-title02__title-en">Member interview</div>
+                  <h1 class="l-page-title02__title-jp">生産管理社員インタビュー</h1>
                 </div>
 
                 <div class="breadcrumb"><a href="">TOP</a> ／ <span>Member interview</span></div>
