--- a/public/page-new_initiatives.html
+++ b/public/page-new_initiatives.html
@@ -43,12 +43,12 @@
     <div class="l-root-wrapper">
       <div class="main-contents">
         <main class="l-container">
-          <div class="l-page-title">
-            <div class="l-page-title__box">
-              <div class="l-page-title__title flex">
-                <div class="l-page-title__title-inner">
-                  <div class="l-page-title__title-en">Initiatives & Projects</div>
-                  <h1 class="l-page-title__title-jp">様々な取り組み</h1>
+          <div class="l-page-title02">
+            <div class="l-page-title02__box">
+              <div class="l-page-title02__title flex">
+                <div class="l-page-title02__title-inner">
+                  <div class="l-page-title02__title-en">Initiatives & Projects</div>
+                  <h1 class="l-page-title02__title-jp">様々な取り組み</h1>
                 </div>
                 <div class="breadcrumb en"><a href="">TOP</a> ／ <span>Member interview</span></div>
               </div>
